creacion vista cotizacion

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,7 +6,12 @@
             "@/*": ["./*"],
             "~~/*": ["./*"],
             "@@/*": ["./*"]
-        }
+        },
+
+        // "types": [
+        //     "@ nuxt / types",
+        //     "@ nuxtjs / color-mode"
+        // ],
     },
     "exclude": ["node_modules", ".nuxt", "dist"]
 }
