--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     },
     "devDependencies": {
         "@nuxt/types": "~0.7.0",
-        "@nuxtjs/style-resources": "^1.0.0"
+        "@nuxtjs/color-mode": "^2.0.5",
+        "@nuxtjs/style-resources": "^1.0.0",
+        "@nuxtjs/svg": "^0.1.12"
     }
 }
