--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "@nuxtjs/axios": "^5.3.6",
         "@nuxtjs/vuetify": "^1.11.2",
+        "axios": "^0.21.1",
         "babel-eslint": "^10.0.3",
         "cookie-universal-nuxt": "^2.1.3",
         "cookieparser": "^0.1.0",
