--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "cookieparser": "^0.1.0",
         "imagesloaded": "^4.1.4",
         "js-cookie": "^2.2.1",
+        "js.cookie": "0.0.4",
         "moment": "^2.26.0",
         "nuxt": "^2.14.7",
         "nuxt-i18n": "^6.3.0",
